@@ -201,6 +201,12 @@ class SiriDBClient:
                 return result
 
     async def query(self, query, time_precision=None, timeout=3600):
+        assert isinstance(query, (str, bytes)), \
+            'query should be of type str, unicode or bytes'
+
+        assert timePrecision is None or isinstance(timePrecision, int), \
+            'timePrecision should be None or an int type.'
+
         try_unavailable = True
         while True:
             connection = self._get_random_connection(try_unavailable)
